chore: drop job_run_id prefix
